--- a/style.css
+++ b/style.css
@@ -128,6 +128,38 @@ ul.menu {
   margin-left: 110px;
 }
 
+/* CSS pour le menu burger */
+.burger-menu {
+  display: none; /* Par défaut, le menu burger est caché */
+}
+
+@media (max-width: 830px) {
+  .nav-header ul {
+    display: none; /* Cacher le menu existant sur les écrans de taille mobile */
+    flex-direction: column; /* Afficher les éléments du menu en colonne */
+    align-items: center; /* Centrer les éléments horizontalement */
+    padding: 0;
+  }
+  .burger-menu {
+    display: block; /* Afficher le menu burger sur les écrans de taille mobile */
+    margin-left: auto; /* Pour pousser le menu burger complètement à droite */
+    cursor: pointer;
+  }
+  .nav-header {
+    display: flex;
+    justify-content: space-between; /* Pour espacer les éléments horizontalement */
+    align-items: center; /* Pour centrer les éléments verticalement */
+    padding: 30px 20px; /* Ajouter un espace de 20px sur les côtés de la barre de navigation */
+    margin-left: -40px;
+  }
+  .nav-header ul li {
+    margin: 10px 0; /* Ajouter un espacement entre les éléments du menu */
+  }
+  .burger-menu img {
+    width: 24px; /* Ajuster la largeur de l'icône du menu burger */
+    height: auto; /* Garder le rapport hauteur/largeur de l'icône */
+  }
+}
 /*************** FOOTER ****************/
 ul #menu-menu-footer.menu {
   display: flex;
@@ -322,6 +354,10 @@ form.wpcf7-form.init input[type=submit]:hover {
 }
 
 /* Partie du milieu */
+.bordure_mobile {
+  display: none;
+}
+
 .photo-milieu {
   display: flex;
   align-items: center;
@@ -460,14 +496,14 @@ img.icon_fullscreen {
     flex-direction: column;
   }
   .image-photo img {
-    max-width: 90%;
+    max-width: 80%;
     height: auto;
     margin: auto;
   }
   .photo-contenu {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 90%;
+    margin-left: 0;
+    margin-right: 0;
+    max-width: 100%;
   }
   .photo-contenu-infos {
     flex-direction: column-reverse;
@@ -475,38 +511,43 @@ img.icon_fullscreen {
     text-align: center;
   }
   .photo-infos {
-    width: 90%;
-    border-bottom: solid 1px;
+    width: 80%;
+    border-bottom: none;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-right: 1em;
+    margin-right: 0;
   }
   .photo-infos h2 {
     font-size: 36px;
     margin: 0;
+    text-align: left;
   }
   .photo-infos p {
     font-size: 12px;
     line-height: 1.2;
   }
   /* Partie du milieu */
+  .bordure_mobile {
+    display: block;
+    border-bottom: 1px solid black;
+  }
   .photo-milieu {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px 0;
-    border-bottom: 1px solid black;
-    width: 90%;
+    margin: auto;
+    border-bottom: none;
+    width: 80%;
   }
-  .bouton-contact,
-  .fleches {
-    width: 90%;
+  .bouton-contact {
+    width: 100%;
+    margin-right: 0;
   }
   #texte-bouton {
     flex-direction: column;
     width: 100%;
     align-items: center;
-    margin-bottom: 1.5em;
+    margin-bottom: 2em;
   }
   .texte-gauche {
     width: 95%;
@@ -529,11 +570,12 @@ img.icon_fullscreen {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    width: 80%;
+    margin: auto;
   }
   .related-photo {
-    width: 318px;
-    height: 280px;
-    margin: 10px;
+    width: 35em;
+    height: 20em;
   }
   .related-photo-thumbnail {
     width: 100%;
