--- a/style.css
+++ b/style.css
@@ -136,28 +136,33 @@ ul.menu {
 @media (max-width: 830px) {
   .nav-header ul {
     display: none; /* Cacher le menu existant sur les écrans de taille mobile */
-    flex-direction: column; /* Afficher les éléments du menu en colonne */
-    align-items: center; /* Centrer les éléments horizontalement */
+    flex-direction: column;
+    align-items: center;
     padding: 0;
   }
   .burger-menu {
-    display: block; /* Afficher le menu burger sur les écrans de taille mobile */
-    margin-left: auto; /* Pour pousser le menu burger complètement à droite */
+    display: block;
+    margin-left: auto;
     cursor: pointer;
   }
   .nav-header {
     display: flex;
-    justify-content: space-between; /* Pour espacer les éléments horizontalement */
-    align-items: center; /* Pour centrer les éléments verticalement */
-    padding: 30px 20px; /* Ajouter un espace de 20px sur les côtés de la barre de navigation */
+    justify-content: space-between;
+    align-items: center;
+    padding: 22px 20px;
     margin-left: -40px;
   }
+  .nav-header img {
+    width: 10em;
+    margin-left: 3em;
+  }
   .nav-header ul li {
-    margin: 10px 0; /* Ajouter un espacement entre les éléments du menu */
+    margin: 10px 0;
   }
   .burger-menu img {
-    width: 24px; /* Ajuster la largeur de l'icône du menu burger */
-    height: auto; /* Garder le rapport hauteur/largeur de l'icône */
+    width: 2em;
+    height: auto;
+    margin-right: -4em;
   }
 }
 /*************** FOOTER ****************/
