--- a/style.css
+++ b/style.css
@@ -843,6 +843,56 @@ img.icon_fullscreen {
   -webkit-text-stroke: 1px white;
 }
 
+/* Champs de filtre */
+.filter-section {
+  display: flex;
+  max-width: 1148px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+/* Style des colonnes */
+.filter-category-style {
+  width: 25%; /* Chaque colonne occupe 25% de la largeur */
+  display: flex;
+  justify-content: end;
+}
+
+.filter-format-style {
+  width: 25%;
+  display: flex;
+  justify-content: end;
+}
+
+.filter-sort-style {
+  width: 50%;
+  display: flex;
+  justify-content: end;
+}
+
+.filter-section select {
+  border-radius: 5px;
+  padding: 10px 2px;
+  border: 1px solid #ccc;
+  width: 100%;
+  margin-bottom: 10px; /* Ajouter de l'espace en bas de chaque champ */
+  margin-top: 20px;
+  font-size: 12px;
+  font-family: "Poppins", sans-serif;
+}
+
+#category-filter,
+#format-filter,
+#sort-filter {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+#sort-filter {
+  max-width: 20em; /* Limite la largeur du champ de tri */
+}
+
+/* Contenu restant de la page */
 .accueil-contenu {
   margin-left: auto;
   margin-right: auto;
@@ -851,7 +901,7 @@ img.icon_fullscreen {
 
 .load-more-container {
   text-align: center;
-  margin-top: 20px; /* Ajustez selon votre mise en page */
+  margin-top: 20px;
 }
 
 .load-more-button {
@@ -872,6 +922,22 @@ img.icon_fullscreen {
   background-color: #ddd;
 }
 
+/* Media query pour les écrans de taille inférieure à 768 pixels */
+@media (max-width: 767px) {
+  .filter-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .filter-category-style {
+    width: 50%;
+  }
+  .filter-format-style {
+    width: 50%;
+  }
+  #sort-filter {
+    max-width: none;
+  }
+}
 /* CSS pour la mise en forme de page.php */
 .page-container {
   max-width: 1440px;
