--- a/sass/_modale.scss
+++ b/sass/_modale.scss
@@ -1,4 +1,5 @@
 /*************** La modale ****************/
+// Animation d'entrée de la modale
 @keyframes fadeIn {
     0% {
         opacity: 0;
