--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -75,12 +75,26 @@
     text-align: center;
  }
 
-.bouton-contact a {
-    display: block;
+.bouton-contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10%;
     padding: 10px;
-    background-color: #d8d8d8; 
-    color: black; 
-    text-decoration: none;
+    background-color: #d8d8d8;    
+}
+
+// button.bouton-contact {
+//     background-color: #d8d8d8;
+//     text-decoration: none;
+// }
+
+button {
+    border: none;
+    background-color: #d8d8d8;
+    font-family:'Poppins';
+    font-size: 12px;
+    color: black;
 }
 
 .fleches {
@@ -116,10 +130,6 @@
     width: 70%;
     text-align: left;
 }
-
-.bouton-contact {
-     margin-right: 7%;
- }
 
  .image-container {
     margin-bottom: -12px;
@@ -306,6 +316,12 @@ img.icon_fullscreen {
     }
 
 }
+
+
+
+
+
+
 
 
 
