--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -84,17 +84,13 @@
     background-color: #d8d8d8;    
 }
 
-// button.bouton-contact {
-//     background-color: #d8d8d8;
-//     text-decoration: none;
-// }
-
 button {
     border: none;
     background-color: #d8d8d8;
     font-family:'Poppins';
     font-size: 12px;
     color: black;
+    cursor: pointer;
 }
 
 .fleches {
